<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation ="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="36dp"
        android:contentDescription="@string/cafe"
        app:srcCompat="@drawable/_17402_17685176_3202600_0a0180f5_image" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/welcome"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="16dp"

        />
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:inputType="textCapWords"
        android:hint="@string/enter_your_name"
        />
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:inputType="textPassword"
        android:hint = "@string/enter_your_password"
        />
    <Button
        android:id="@+id/ButtonOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/order"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:background="@drawable/quadrangle_button"
        />
</LinearLayout>